# test_connaissance_ba-ba

./: exercice1.ipynb  exercice2.ipynb  exercice3.ipynb  pyproject.toml  requirements.txt
