[project]
name = "verificationconnaissance"
version = "0.1.0"
description = ""
authors = [
    {name = "romaric",email = "hippolytetchoffo3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "verificationconnaissance", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
